@@ -79,14 +79,14 @@ event once the
 event has been processed.
 .\"
 .TP
-.BR -c ", " --cancel
+.BR -c
 Cancels a running shutdown.
 .I TIME
 is not specified with this option, the first argument is
 .I MESSAGE.
 .\"
 .TP
-.BR -k ", " --warn-only
+.BR -k
 Only send out the warning messages and disable logins, do not actually
 bring the system down.
 .\"
